--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>jogo da velha</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <script src="index.js"></script>
