--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>jogo da velha</title>
     <link rel="stylesheet" href="css/index.css">
+	  <script src="js/index.java"></script>
   </head>
   <body>
     <script src="index.js"></script>
