--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>jogo da velha</title>
     <link rel="stylesheet" href="css/index.css">
-	  <script src="index.js"></script>
+	  <script src="index.java"></script>
   </head>
 <body>
     <div class="jumbotron">
