--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>jogo da velha</title>
     <link rel="stylesheet" href="css/index.css">
   </head>
-	<script src="index.java"></script>
+	<script src="index.js"></script>
 <body>
     <div class="jumbotron">
       <center><h1 style="font-family: Verdana;">Jogo da Velha</h1>
