--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
   </head>
 <body>
-	<script src="index.js"></script>
+	<script src="index.java"></script>
     <div class="jumbotron">
       <center><h1 style="font-family: Verdana;">Jogo da Velha</h1>
         <table class="parte1" style="align:center;">
